--- a/.github/workflows/dime-app-release.yml
+++ b/.github/workflows/dime-app-release.yml
@@ -80,6 +80,10 @@ jobs:
     name: ${{ inputs.platform }}_${{ inputs.target_env }}_app
     runs-on: [self-hosted, macOS]
     needs: [prepare]
+    env:
+      RBENV_VERSION: 2.7.5
+      LC_ALL: en_US.UTF-8
+      LANG: en_US.UTF-8
     steps:
       - uses: kkp-dfs/dime-github-actions-workflows/checkout@main
         with:
@@ -94,24 +98,19 @@ jobs:
       # - run: curl -X DELETE -H "Accept:application/vnd.github.v3+json" https://api.github.com/repos/${{ github.repository }}/actions/artifacts/ARTIFACT_ID
       - name: General set up
         run: |
+          export PATH=/opt/homebrew/opt/openjdk/bin:/opt/homebrew/bin:/opt/homebrew/sbin:/opt/flutter/bin:$PATH
           cat <<EOF > $HOME/.netrc
           machine github.com
             login ${{ secrets.gh_access_token }}
             password x-oauth-basic
           EOF
           chmod 600 $HOME/.netrc
-
           source /Users/dime/.bash_profile
-          export PATH=/opt/homebrew/opt/openjdk/bin:/opt/homebrew/bin:/opt/homebrew/sbin:/opt/flutter/bin:$PATH
-          export RBENV_VERSION=2.7.5
-          export LC_ALL=en_US.UTF-8
-          export LANG=en_US.UTF-8
-
-          echo '### Setup environment ###'
           make gen-config-${{ inputs.target_env }}
       - name: Set up for android
         if: ${{ inputs.platform == 'android' }}
         run: |
+          export PATH=/opt/homebrew/opt/openjdk/bin:/opt/homebrew/bin:/opt/homebrew/sbin:/opt/flutter/bin:$PATH
           gradle wrapper -p android/
           cp key.properties android/
           cp /Users/dime/google-services.json ./android/app/
@@ -130,9 +129,9 @@ jobs:
           echo '### build bundle ###'
           cd ..
           flutter build appbundle --flavor dev
-      - name: build app
+      - name: Build app
         run: |
-          echo '### Start building app ###'
+          export PATH=/opt/homebrew/opt/openjdk/bin:/opt/homebrew/bin:/opt/homebrew/sbin:/opt/flutter/bin:$PATH
           cd ${{ inputs.platform }}
           bundle update fastlane
           bundle exec fastlane -v
