--- a/.github/workflows/dime-app-release.yml
+++ b/.github/workflows/dime-app-release.yml
@@ -137,6 +137,7 @@ jobs:
           flutter build appbundle --flavor dev
 
           cd ${{ inputs.platform }}
+          bundle update fastlane
           bundle exec fastlane -v
           bundle exec fastlane update_plugins
           bundle exec fastlane ${{ env.LANE }}
