--- a/.github/workflows/dime-app-release.yml
+++ b/.github/workflows/dime-app-release.yml
@@ -31,6 +31,7 @@ jobs:
     name: Prepare environment secret file
     runs-on: [self-hosted, linux, main, deployment]
     steps:
+      - uses: AutoModality/action-clean@v1
       - uses: kkp-dfs/dime-github-actions-workflows/checkout@main
         with:
           repository: ${{ inputs.repository }}
