build ios before distribute

--- a/.github/workflows/dime-app-release.yml
+++ b/.github/workflows/dime-app-release.yml
@@ -165,9 +165,9 @@ jobs:
           source /Users/dime/.bash_profile
 
           cp /Users/dime/dime_app_release_files/apple.p8 ./ios/fastlane/apple.p8
+          flutter build ios --flavor sit
 
           cd ios
-          pod install
           bundle install
           bundle update fastlane
           bundle exec fastlane -v
