--- a/.github/workflows/dime-ci-cd.yml
+++ b/.github/workflows/dime-ci-cd.yml
@@ -375,7 +375,7 @@ jobs:
     continue-on-error: true
     steps:
       - name: Trigger jenkins job
-        uses: kkp-dfs/dime-github-actions-workflows/jenkins-trigger@jenkins-actions
+        uses: kkp-dfs/dime-github-actions-workflows/jenkins-trigger@jenkins-action
         with:
           url: http://jenkins.qa.svc.cluster.local:8080
           user_name: parse-kkp
