--- a/.github/workflows/dime-ci-cd.yml
+++ b/.github/workflows/dime-ci-cd.yml
@@ -377,13 +377,14 @@ jobs:
     continue-on-error: true
     steps:
       - name: Trigger jenkins job
-        uses: jabbukka/jenkins-trigger@main
-        # uses: kkp-dfs/dime-github-actions-workflows/jenkins-trigger@jenkins-action
+        uses: kkp-dfs/dime-github-actions-workflows/jenkins-trigger@jenkins-action
         with:
           url: http://jenkins.qa.svc.cluster.local:8080
-          user_name: parse-kkp
+          user_name: jenkins
           api_token: ${{ secrets.jenkins_api_token }}
           job_name: API-E2E
           parameter: '{"BRANCH":"main","ENVIRONMENT":"sit","TAG":"-i SIT"}'
           wait: "true"
           timeout: "1000"
+          slack_channel: ${{ inputs.slack_channel }}
+          slack_webhook: ${{ secrets.slack_webhook }}
